--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,25 +55,21 @@ jobs:
           sudo rsync -av --delete ~/pjn-api-temp/ /var/www/pjn-api/
           rm -rf ~/pjn-api-temp
           
-          # Execute all PM2 commands as root in a single session
-          sudo -s << 'ROOTCOMMANDS'
-            cd /var/www/pjn-api
-            
-            echo "📦 Installing dependencies..."
-            npm ci --production
-            
-            echo "🔄 Reloading PM2 application..."
-            pm2 reload ecosystem.config.js --env production || pm2 start ecosystem.config.js --env production
-            pm2 save
-            
-            echo "📊 PM2 Status:"
-            pm2 status
-            
-            echo "📋 Application logs (last 20 lines):"
-            pm2 logs 'pjn/api' --lines 20 --nostream || true
-            
-            echo "✅ Deployment completed!"
-          ROOTCOMMANDS
+          # Run commands as root
+          echo "📦 Installing dependencies..."
+          sudo /bin/bash -c "cd /var/www/pjn-api && npm ci --production"
+          
+          echo "🔄 Reloading PM2 application..."
+          sudo /bin/bash -c "cd /var/www/pjn-api && pm2 reload ecosystem.config.js --env production || pm2 start ecosystem.config.js --env production"
+          sudo /bin/bash -c "pm2 save"
+          
+          echo "📊 PM2 Status:"
+          sudo /bin/bash -c "pm2 status"
+          
+          echo "📋 Application logs (last 20 lines):"
+          sudo /bin/bash -c "pm2 logs 'pjn/api' --lines 20 --nostream" || true
+          
+          echo "✅ Deployment completed!"
         ENDSSH
         
         # Clean up
@@ -94,38 +90,44 @@ jobs:
         
         # Check if the app is running on the server
         ssh -o StrictHostKeyChecking=no -i private_key_health -p ${SSH_PORT:-22} ${USERNAME}@${HOST} << 'ENDSSH'
-          # Run all health check commands as root in a single session
-          sudo -s << 'ROOTCHECK'
-            echo "📊 PM2 Status:"
-            pm2 status
+          echo "📊 PM2 Status:"
+          sudo /bin/bash -c "pm2 status"
+          
+          echo ""
+          echo "🔍 Checking pjn/api process:"
+          PM2_OUTPUT=$(sudo /bin/bash -c "pm2 status" 2>&1)
+          echo "$PM2_OUTPUT"
+          
+          if echo "$PM2_OUTPUT" | grep -q 'pjn/api.*online'; then
+            echo "✅ Application is running!"
             
             echo ""
-            echo "🔍 Checking pjn/api process:"
-            if pm2 status | grep -q 'pjn/api.*online'; then
-              echo "✅ Application is running!"
-              
-              echo ""
-              echo "📋 Recent logs:"
-              pm2 logs 'pjn/api' --lines 10 --nostream || true
-              
-              exit 0
-            else
-              echo "❌ Application is not running or not in 'online' status"
-              
-              echo ""
-              echo "📋 Error logs:"
-              pm2 logs 'pjn/api' --lines 20 --nostream || true
-              
-              echo ""
-              echo "🔍 Debugging info:"
-              echo "User in root shell: $(whoami)"
-              echo "PM2 location: $(which pm2 || echo 'not found')"
-              echo "Node location: $(which node || echo 'not found')"
-              echo "PATH: $PATH"
-              
-              exit 1
-            fi
-          ROOTCHECK
+            echo "📋 Recent logs:"
+            sudo /bin/bash -c "pm2 logs 'pjn/api' --lines 10 --nostream" || true
+            
+            exit 0
+          else
+            echo "❌ Application is not running or not in 'online' status"
+            
+            echo ""
+            echo "📋 Error logs:"
+            sudo /bin/bash -c "pm2 logs 'pjn/api' --lines 20 --nostream" || true
+            
+            echo ""
+            echo "🔍 Debugging info:"
+            echo "Current user: $(whoami)"
+            echo "Root PATH check:"
+            sudo /bin/bash -c "echo PATH=\$PATH"
+            sudo /bin/bash -c "which pm2 || echo 'PM2 not found in PATH'"
+            sudo /bin/bash -c "which node || echo 'Node not found in PATH'"
+            
+            echo ""
+            echo "Looking for PM2 installation:"
+            sudo find /usr -name pm2 -type f 2>/dev/null | head -5
+            sudo find /root -name pm2 -type f 2>/dev/null | head -5
+            
+            exit 1
+          fi
         ENDSSH
         
         # Clean up
